(Fix): Display "menu" button on mobile
Problem
The hamburger only menu button is a bit ambiguous. Would prefer to
display "Menu" as well.

Solution
Made the website title smaller in another commit, so there was extra
room left to display the "Menu" text.

Closes #62.

--- a/addons/adventure_log/finnito/adventurelog-theme/resources/css/theme.css
+++ b/addons/adventure_log/finnito/adventurelog-theme/resources/css/theme.css
@@ -409,7 +409,7 @@ input[type=checkbox].toggle {
 input[type=checkbox].toggle,
 .hamburger {
   position: absolute;
-  right: 0.5rem;
+  right: 0rem;
   top: 0.5rem;
   margin: 0;
   display: inline;
@@ -428,7 +428,7 @@ input[type=checkbox].toggle,
   margin: 0 0 0 0.25rem;
   line-height: 1;
   font-weight: 500;
-  display: none;
+  display: inline;
 }
 
 .hamburger span {
